# infer-mli

./: Cargo.toml  README.md
.github/workflows/: publish.yml
src/: main.rs
